--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   </nav>
   <div class="container">
     <h2> 
-        <a target="_blank" href="final/incendis.html">TREBALL FINAL - MAPA FINAL</a>
+        <a target="_blank" href="aportag.github.io/incendis.html">TREBALL FINAL - MAPA FINAL</a>
     </h2>
     <h5>Mis Mapas. Trabajos classe</h5>
     <ul>
